# mg44

./: .cproject  .gitignore  .project  Makefile  Makefile.am  configure.ac  main.c  mg44.1  mongoose.c  mongoose.h
civetweb/: civetweb.c  civetweb.h  handle_form.inl  md5.inl  sha1.inl
debian/: changelog  control
mg44.xcodeproj/: project.pbxproj
mg44.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mg44.xcodeproj/project.xcworkspace/xcuserdata/luz.xcuserdatad/: UserInterfaceState.xcuserstate
mg44.xcodeproj/xcuserdata/luz.xcuserdatad/xcschemes/: mg44.xcscheme  xcschememanagement.plist
mg44.xcworkspace/: contents.xcworkspacedata
mg44.xcworkspace/xcuserdata/luz.xcuserdatad/: UserInterfaceState.xcuserstate
mg44.xcworkspace/xcuserdata/luz.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist  Expressions.xcexplist
